--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <script src ="app.js" defer></script>
     <title>2048</title>
 </head>
 <body>
-    
+    <h1>2048</h1>
+
 </body>
 </html>
