Basic gameboard complete

--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
 </head>
 <body>
     <h1>2048</h1>
-
+    <div id="board">
+        <div class = "tile">2</div>
+        <div class = "tile">2</div>
+        <div class = "tile">2</div>
+        <div class = "tile">2</div>
+        <div class = "tile">2</div>
+        <div class = "tile">2</div>
+        <div class = "tile">2</div>
+        <div class = "tile">2</div>
+        <div class = "tile">2</div>
+        <div class = "tile">2</div>
+        <div class = "tile">2</div>
+        <div class = "tile">2</div>
+        <div class = "tile">2</div>
+        <div class = "tile">2</div>
+        <div class = "tile">2</div>
+        <div class = "tile">2</div>
+    </div>
 </body>
 </html>
