Morning push - currently working on array for board

--- a/index.html
+++ b/index.html
@@ -4,29 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src ="app.js" defer></script>
+    <script src ="./app.js" defer></script>
+    <link rel="stylesheet" href="./style.css">
     <title>2048</title>
 </head>
 <body>
     <h1>2048</h1>
     <div id="board">
         <div class = "tile">2</div>
-        <div class = "tile">2</div>
-        <div class = "tile">2</div>
-        <div class = "tile">2</div>
-        <div class = "tile">2</div>
-        <div class = "tile">2</div>
-        <div class = "tile">2</div>
-        <div class = "tile">2</div>
-        <div class = "tile">2</div>
-        <div class = "tile">2</div>
-        <div class = "tile">2</div>
-        <div class = "tile">2</div>
-        <div class = "tile">2</div>
-        <div class = "tile">2</div>
-        <div class = "tile">2</div>
-        <div class = "tile">2</div>
+        <div class = "tile">4</div>
+        <div class = "tile">8</div>
     </div>
 </body>
+<!-- <script>
+    document.onkeydown = function (event) {
+      switch (event.keyCode) {
+         case 37:
+            console.log("Left key is pressed.");
+            break;
+         case 38:
+            console.log("Up key is pressed.");
+            break;
+         case 39:
+            console.log("Right key is pressed.");
+            break;
+         case 40:
+            console.log("Down key is pressed.");
+            break;
+      }
+   };
+</script> -->
 </html>
